--- a/src/main/java/shtykh/ui/CacheTestDialogue.form
+++ b/src/main/java/shtykh/ui/CacheTestDialogue.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="815" height="297"/>
+      <xy x="48" y="54" width="817" height="297"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -47,18 +47,10 @@
               </component>
               <component id="eeae3" class="javax.swing.JButton" binding="buttonRemove">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Remove"/>
-                </properties>
-              </component>
-              <component id="2cf" class="javax.swing.JButton" binding="buttonGet">
-                <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Get"/>
+                  <text value="Remove"/>
                 </properties>
               </component>
               <component id="269ec" class="javax.swing.JButton" binding="buttonLoad">
@@ -80,6 +72,14 @@
                   <toolTipText value="Tweet counts"/>
                   <value value="15"/>
                   <valueIsAdjusting value="true"/>
+                </properties>
+              </component>
+              <component id="2cf" class="javax.swing.JButton" binding="buttonGet">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Show"/>
                 </properties>
               </component>
             </children>
