--- a/src/main/java/shtykh/ui/CacheTestDialogue.form
+++ b/src/main/java/shtykh/ui/CacheTestDialogue.form
@@ -66,12 +66,12 @@
                   <text value="Remove"/>
                 </properties>
               </component>
-              <component id="2cf" class="javax.swing.JButton" binding="buttonGet">
+              <component id="2cf" class="javax.swing.JButton" binding="buttonEdit">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Show"/>
+                  <text value="Edit"/>
                 </properties>
               </component>
               <component id="ec97d" class="javax.swing.JLabel">
